--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
 
                 <div class="nav-item">
                     <div class="nav-account">
-                        <a href="account.html">
-                            <i class="fa-solid fa-circle-user header-account-icon"></i>
-                        </a>
+                        <i class="fa-solid fa-circle-user header-account-icon"></i>
+                        <ul class="user-list">
+                            <li class="user-item"><a href="account.html">User</a></li>
+                            <li class="user-item user-login"><a href="account.html">Log in</a></li>
+                            <li class="user-item user-register"><a href="register.html">Register</a></li>
+                            <li class="user-item user-logout"><a href="account.html">Log out</a></li>
+                        </ul>
                     </div>
 
                     <div class="nav-cart">
@@ -98,9 +102,13 @@
 
                 <div class="nav-item">
                     <div class="nav-account">
-                        <a href="account.html">
-                            <i class="fa-solid fa-circle-user header-account-icon"></i>
-                        </a>
+                        <i class="fa-solid fa-circle-user header-account-icon"></i>
+                        <ul class="user-list">
+                            <li class="user-item"><a href="account.html">User</a></li>
+                            <li class="user-item user-login"><a href="account.html">Log in</a></li>
+                            <li class="user-item user-register"><a href="register.html">Register</a></li>
+                            <li class="user-item user-logout"><a href="account.html">Log out</a></li>
+                        </ul>
                     </div>
 
                     <div class="nav-cart">
@@ -158,7 +166,6 @@
 
         <main>
             <div class="index-header">
-
                 <div class="banner-slider">
                     <div class="header-slideshow">
                         <div class="header-slider">
