--- a/cart.html
+++ b/cart.html
@@ -16,14 +16,13 @@
     <link rel="canonical" href="https://kling-theme.myshopify.com/">
     <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/0461/9036/2778/files/favicon_1_16x16.png?v=1630996498"
         type="image/png" />
-    <title>Account - Kling</title>
+    <title>Cart - Kling</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./asset/css/register.css">
+    <link rel="stylesheet" href="./asset/css/cart.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -157,49 +156,73 @@
             </div>
         </header>
 
-
         <main>
             <div class="index-header">
                 <div class="bg-header">
-                    <h1 class="heading" data-aos="fade-right" data-aos-duration="1000">Create Account</h1>
-                    <div class="path" data-aos="fade-left" data-aos-duration="2000">
+                    <h1 class="heading">Your shopping cart</h1>
+                    <div class="path">
                         <a href="index.html" class="back-to-home">Home</a>
                         <span>/</span>
-                        <span class="page">Create Account</span>
+                        <span class="page">Your shopping cart</span>
                     </div>
                 </div>
             </div>
             <div class="container">
-                <div class="register">
-                    <form action="#" class="form-register" method="post" data-aos="fade-up" data-aos-duration="1500">
-                        <div class="form-input">
-                            <input type="text" id="firstname" class="firstname" placeholder="First Name" value>
-                            <p class="error error-firstname"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="text" id="lastname" class="lastname" placeholder="Last Name" value>
-                            <p class="error error-lastname"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="text" id="email" class="email" placeholder="Email" value>
-                            <p class="error error-email"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="password" id="password" class="password" placeholder="Password" value>
-                            <p class="error error-password"></p>
-                        </div>
-                        <div class="button-submit">
-                            <button type="submit" class="btn">CREATE ACCOUNT</button>
-                        </div>
-                        <div class="link-wrapper">
-                            <div class="login">
-                                <a href="account.html">Sign In</a>
+                <!-- <div class="cart-empty-msg">
+                    <img src="https://cdn.shopify.com/s/files/1/0461/9036/2778/t/4/assets/empty-cart.png?v=124674504766911058681630046659" alt="">
+                    <h4>NO ITEMS IN CART</h4>
+                    <p>Add items you want to shop</p>
+                    <p><a href="#">Start Shopping</a></p>
+                </div> -->
+                <div class="row">
+                    <div class="col col-sm-8">
+                        <div class="cart-list">
+                            <h4>PRODUCTS</h4>
+                            <div class="cart-item row">
+                                <div class="product-img col col-4">
+                                    <img src="https://cdn.shopify.com/s/files/1/0461/9036/2778/products/Product14_768x.jpg?v=1599117180"
+                                        alt="">
+                                    <i class="fa-solid fa-xmark"></i>
+                                </div>
+                                <div class="info-product col col-8">
+                                    <div class="name"><a href="#">LEATHER DESIGNER BAG</a></div>
+                                    <div class="price">$ 275.00</div>
+                                    <div class="qlty">
+                                        <button type="button" class="cart-product">
+                                            <span>−</span>
+                                        </button>
+                                        <span class="cart-quanlity--num">1</span>
+                                        <button type="button" class="cart-product">
+                                            <span>+</span>
+                                        </button>
+                                    </div>
+                                    <div class="cart-total">
+                                        <p class="">Total: $275.00</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div data-aos="fade-right" data-aos-duration="1000">
-                                <p class="return-home"><a href="index.html">Return to store</a></p>
+                            <a class="btn-action" href="#">Continue Shopping
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col col-sm-4">
+                        <div class="shipping">
+                            <div class="order-summary">
+                                <h4>ORDER SUMMARY</h4>
+                                <p class="cart-total-price">
+                                    <span>SubTotal: </span>
+                                    <span>$ 289.00</span>
+                                </p>
+                                <div class="cart-note">
+                                    <p>Special instructions for seller</p>
+                                    <textarea name="" id="" cols="44" rows="4"></textarea>
+                                    <p class="note-btn">Add a note to your order</p>
+                                </div>
+                                <p class="shopping-checkout">Shipping, taxes, and discounts will be calculated at checkout.</p>
+                                <a class="cart-btn">Proceed to Checkout</a>
                             </div>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </main>
@@ -280,8 +303,8 @@
 
         <footer>
             <div class="footer-top">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-                    <div class="footer-item">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 ">
+                    <div class="footer-item col">
                         <div class="footer-logo">
                             <a href="index.html">
                                 <img src="https://cdn.shopify.com/s/files/1/0461/9036/2778/files/light-logo_2x_5a4ab4f7-24bb-4dbe-aa42-0a05e7b9848f_x44@2x.png?v=1612265256"
@@ -303,7 +326,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> INFORMATION </h6>
                             <ul class="footer-menu">
@@ -325,7 +348,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> CUSTOMER SERVICE </h6>
                             <ul class="footer-menu">
@@ -347,7 +370,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> OUR HISTORY </h6>
                             <ul class="footer-menu">
@@ -369,7 +392,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item footer-form">
+                    <div class="footer-item col ">
                         <div class="footer-container">
                             <h6 class="footer-title">SIGN UP FOR NEWSLETTER</h6>
                             <div class="footer-newsletter">
@@ -399,17 +422,14 @@
         </footer>
     </div>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./asset/js/main.js"></script>
-    <script src="./asset/js/register.js"></script>
+    <script src="./asset/js/contact.js"></script>
 </body>
 
 </html>
