--- a/checkout.html
+++ b/checkout.html
@@ -11,19 +11,25 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://monorail-edge.shopifysvc.com">
     <link rel="canonical" href="https://kling-theme.myshopify.com/">
     <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/0461/9036/2778/files/favicon_1_16x16.png?v=1630996498"
         type="image/png" />
-    <title>Account - Kling</title>
+    <title>Cart - Kling</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./asset/css/register.css">
+    <link rel="stylesheet" href="./asset/css/cart.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .body {
+            font-family: 'Encode Sans Condensed', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -157,50 +163,159 @@
             </div>
         </header>
 
-
         <main>
-            <div class="index-header">
-                <div class="bg-header">
-                    <h1 class="heading" data-aos="fade-right" data-aos-duration="1000">Create Account</h1>
-                    <div class="path" data-aos="fade-left" data-aos-duration="2000">
-                        <a href="index.html" class="back-to-home">Home</a>
-                        <span>/</span>
-                        <span class="page">Create Account</span>
+            <div class="container-sm my-5">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="w-full">
+                            <a href="">
+                                <img src="https://cdn.shopify.com/s/files/1/0461/9036/2778/files/logo_41be5bb0-ee12-4cb7-8ae7-3267b91b49e3_300x300.png?v=1598248765"
+                                    class="w-[160px]" alt="">
+                            </a>
+                            <div class="flex items-center gap-2 my-3"><a
+                                    class="text-slate-900 no-underline text-base hover:text-[#eb6420] transition-all duration-300"
+                                    href="/cart">Cart</a><span><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                                        viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                                        class="w-3 h-3 leading-none">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M8.25 4.5l7.5 7.5-7.5 7.5">
+                                        </path>
+                                    </svg></span><span class="font-bold  text-base">Infomation</span><span><svg
+                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-3 h-3 leading-none">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M8.25 4.5l7.5 7.5-7.5 7.5">
+                                        </path>
+                                    </svg></span><span class="text-base">Shiping</span><span><svg
+                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-3 h-3 leading-none">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M8.25 4.5l7.5 7.5-7.5 7.5">
+                                        </path>
+                                    </svg></span><span class="text-base">Payment</span></div>
+
+                            <div class="contact-info d-flex justify-content-between pb-3 mt-4">
+                                <h5 class="text-xl">Contact information</h5>
+                                <span class="text-slate-500 mt-1">Already have an account? <a href=""
+                                        class="no-underline text-slate-900 hover:text-[#eb6420] transition-all duration-300">Log
+                                        in</a></span>
+                            </div>
+                            <div class="mb-3">
+                                <input type="email" class="form-control pt-[9px] pb-[12x] px-3"
+                                    id="exampleFormControlInput1" placeholder="Email">
+                            </div>
+
+                            <div class="address-info pb-4">
+                                <h5 class="text-xl pt-3">Shipping address</h5>
+                                <div class="pb-sm-3 mt-3">
+                                    <select class="form-select pt-[10px] pb-[10x] px-3"
+                                        aria-label="Default select example">
+                                        <option selected>Country/Region</option>
+                                        <option value="3">China</option>
+                                        <option value="1">Tokyo</option>
+                                        <option value="2">USA</option>
+                                        <option value="4">Viet Nam</option>
+
+                                    </select>
+                                </div>
+                                <div class="name-info pb-sm-3">
+                                    <div class="row">
+                                        <div class="col">
+                                            <input type="text" class="form-control pt-[9px] pb-[12x] px-3"
+                                                placeholder="First name" aria-label="First name">
+                                        </div>
+                                        <div class="col">
+                                            <input type="text" class="form-control pt-[9px] pb-[12x] px-3"
+                                                placeholder="Last name" aria-label="Last name">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <input type="email" class="form-control pt-[9px] pb-[12x] px-3"
+                                        id="exampleFormControlInput1" placeholder="Address">
+                                </div>
+
+                                <div class="name-info pb-sm-3">
+                                    <div class="row">
+                                        <div class="col">
+                                            <input type="text" class="form-control pt-[9px] pb-[12x] px-3"
+                                                placeholder="City" aria-label="First name">
+                                        </div>
+                                        <div class="col">
+                                            <input type="text" class="form-control pt-[9px] pb-[12x] px-3"
+                                                placeholder="Postal code (optional)" aria-label="Last name">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-check pb-sm-4">
+                                    <input class="form-check-input p-md-2" type="checkbox" value=""
+                                        id="flexCheckDefault">
+                                    <label class="form-check-label mt-[3px]" for="flexCheckDefault">
+                                        Save this information for next time
+                                    </label>
+                                </div>
+
+                                <div class="step-footer d-flex justify-content-sm-between mt-3 align-items-center">
+                                    <div class="product-wishlist-cart">
+                                        <a href="#">
+                                            <button
+                                                class="dt-sc-btn text-slate-900 hover:text-[#eb6420] transition-all duration-300">
+                                                Return to cart
+                                            </button>
+                                        </a>
+                                    </div>
+                                    <div class="product-wishlist-cart">
+                                        <a href="">
+                                            <button
+                                                class="dt-sc-btn text-white bg-[#000] py-[10px] px-4 transition-all duration-300 hover:bg-[#eb6420]">
+                                                Countinue to shipping
+                                            </button>
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+
                     </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="register">
-                    <form action="#" class="form-register" method="post" data-aos="fade-up" data-aos-duration="1500">
-                        <div class="form-input">
-                            <input type="text" id="firstname" class="firstname" placeholder="First Name" value>
-                            <p class="error error-firstname"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="text" id="lastname" class="lastname" placeholder="Last Name" value>
-                            <p class="error error-lastname"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="text" id="email" class="email" placeholder="Email" value>
-                            <p class="error error-email"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="password" id="password" class="password" placeholder="Password" value>
-                            <p class="error error-password"></p>
-                        </div>
-                        <div class="button-submit">
-                            <button type="submit" class="btn">CREATE ACCOUNT</button>
-                        </div>
-                        <div class="link-wrapper">
-                            <div class="login">
-                                <a href="account.html">Sign In</a>
+                    <div class="col-sm-6">
+                        <div class="bg-gray-50 p-5 h-full">
+                            <div class="listItem flex flex-col gap-3 border-b pb-5">
+                                <div class="flex items-center justify-between ">
+                                    <div class="flex gap-3 items-center">
+                                        <div class="image w-fit relative "><img
+                                                src="https://cdn.shopify.com/s/files/1/0461/9036/2778/products/Product14_768x.jpg?v=1599117180"
+                                                class="w-[80px] border rounded-2xl" alt=""><span
+                                                class="absolute top-[-8px] p-2 bg-gray-500 rounded-full leading-none  text-white right-[-8px] min-w-[20px] min-h-[20px] max-w-[20px] max-h-[20px] flex justify-center items-center">1</span>
+                                        </div>
+                                        <p class="font-bold text-xl">LEATHER DESIGNER BAG</p>
+                                    </div>
+                                    <p class="flex-end text-base font-bold">$87.00</p>
+                                </div>
                             </div>
-                            <div data-aos="fade-right" data-aos-duration="1000">
-                                <p class="return-home"><a href="index.html">Return to store</a></p>
+                            <hr>
+                            <div class="subtotal py-3 my-2">
+                                <p class="flex justify-between mb-3"><span class="text-gray-500">Subtotal</span><span
+                                        class="font-bold text-2xl">$87.00</span></p>
+                                <p class="flex justify-between items-center"><span
+                                        class="text-gray-500">Shipping</span><span class="text-gray-500">Calculated at
+                                        next step</span></p>
+                            </div>
+                            <hr>
+                            <div class="total py-4">
+                                <p class="flex justify-between align-items-center"><span
+                                        class="text-xl font-bold">Total</span><span
+                                        class="font-bold text-2xl">$87.00</span>
+                                </p>
                             </div>
                         </div>
-                    </form>
+                    </div>
+
+
+
                 </div>
+
             </div>
         </main>
 
@@ -280,8 +395,8 @@
 
         <footer>
             <div class="footer-top">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-                    <div class="footer-item">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 ">
+                    <div class="footer-item col">
                         <div class="footer-logo">
                             <a href="index.html">
                                 <img src="https://cdn.shopify.com/s/files/1/0461/9036/2778/files/light-logo_2x_5a4ab4f7-24bb-4dbe-aa42-0a05e7b9848f_x44@2x.png?v=1612265256"
@@ -303,7 +418,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> INFORMATION </h6>
                             <ul class="footer-menu">
@@ -325,7 +440,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> CUSTOMER SERVICE </h6>
                             <ul class="footer-menu">
@@ -347,7 +462,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> OUR HISTORY </h6>
                             <ul class="footer-menu">
@@ -369,7 +484,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item footer-form">
+                    <div class="footer-item col ">
                         <div class="footer-container">
                             <h6 class="footer-title">SIGN UP FOR NEWSLETTER</h6>
                             <div class="footer-newsletter">
@@ -399,17 +514,14 @@
         </footer>
     </div>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./asset/js/main.js"></script>
-    <script src="./asset/js/register.js"></script>
+    <script src="./asset/js/contact.js"></script>
 </body>
 
 </html>
