--- a/payment.html
+++ b/payment.html
@@ -11,19 +11,25 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://monorail-edge.shopifysvc.com">
     <link rel="canonical" href="https://kling-theme.myshopify.com/">
     <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/0461/9036/2778/files/favicon_1_16x16.png?v=1630996498"
         type="image/png" />
-    <title>Account - Kling</title>
+    <title>Cart - Kling</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./asset/css/register.css">
+    <link rel="stylesheet" href="./asset/css/cart.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .body {
+            font-family: 'Encode Sans Condensed', sans-serif;
+        }
+    </style>
 </head>
 
 <body>
@@ -157,49 +163,150 @@
             </div>
         </header>
 
-
         <main>
-            <div class="index-header">
-                <div class="bg-header">
-                    <h1 class="heading" data-aos="fade-right" data-aos-duration="1000">Create Account</h1>
-                    <div class="path" data-aos="fade-left" data-aos-duration="2000">
-                        <a href="index.html" class="back-to-home">Home</a>
-                        <span>/</span>
-                        <span class="page">Create Account</span>
+            <div class="container-sm my-5">
+                <div class="grid grid-cols-12 mx-auto w-75">
+                    <div class="col-span-12 mx-auto my-5">
+                        <div class="flex mt-4 gap-2 justify-center items-center">
+                            <div class="flex  items-center justify-center">
+                                <p class="flex-col items-center justify-center"><span class=""><svg
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                            stroke-width="1.5" stroke="currentColor"
+                                            class="w-16 h-16 p-2 bg-green-500 rounded-full text-white">
+                                            <path stroke-linecap="round" stroke-linejoin="round"
+                                                d="M7.875 14.25l1.214 1.942a2.25 2.25 0 001.908 1.058h2.006c.776 0 1.497-.4 1.908-1.058l1.214-1.942M2.41 9h4.636a2.25 2.25 0 011.872 1.002l.164.246a2.25 2.25 0 001.872 1.002h2.092a2.25 2.25 0 001.872-1.002l.164-.246A2.25 2.25 0 0116.954 9h4.636M2.41 9a2.25 2.25 0 00-.16.832V12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 12V9.832c0-.287-.055-.57-.16-.832M2.41 9a2.25 2.25 0 01.382-.632l3.285-3.832a2.25 2.25 0 011.708-.786h8.43c.657 0 1.281.287 1.709.786l3.284 3.832c.163.19.291.404.382.632M4.5 20.25h15A2.25 2.25 0 0021.75 18v-2.625c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125V18a2.25 2.25 0 002.25 2.25z">
+                                            </path>
+                                        </svg></span><span class="font-semibold text-green-400">Processing</span></p>
+                            </div>
+                            <div class="flex  items-center justify-center"><span
+                                    class="w-[200px] mb-[30px] mr-3 p-[2px] bg-gray-400 rounded-3xl"></span>
+                                <p class=" flex-col items-center justify-center"><span class=""><svg
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                            stroke-width="1.5" stroke="currentColor"
+                                            class="w-16 h-16 p-2  bg-gray-400 rounded-3xl rounded-full text-white">
+                                            <path stroke-linecap="round" stroke-linejoin="round"
+                                                d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12">
+                                            </path>
+                                        </svg></span><span class="font-semibold   text-gray-400 rounded-3xl">In
+                                        Transit</span></p>
+                            </div>
+                            <div class="flex  items-center justify-center"><span
+                                    class="w-[200px] mb-[30px] mr-3 p-[2px] bg-gray-400 rounded-3xl"></span>
+                                <p class="flex-col items-center justify-center"><span class=""><svg
+                                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                            stroke-width="1.5" stroke="currentColor"
+                                            class="w-16 h-16 p-2  bg-gray-400 rounded-3xl rounded-full text-white">
+                                            <path stroke-linecap="round" stroke-linejoin="round"
+                                                d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25">
+                                            </path>
+                                        </svg></span><span
+                                        class="font-semibold   text-gray-400 rounded-3xl">Delivered</span></p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="register">
-                    <form action="#" class="form-register" method="post" data-aos="fade-up" data-aos-duration="1500">
-                        <div class="form-input">
-                            <input type="text" id="firstname" class="firstname" placeholder="First Name" value>
-                            <p class="error error-firstname"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="text" id="lastname" class="lastname" placeholder="Last Name" value>
-                            <p class="error error-lastname"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="text" id="email" class="email" placeholder="Email" value>
-                            <p class="error error-email"></p>
-                        </div>
-                        <div class="form-input">
-                            <input type="password" id="password" class="password" placeholder="Password" value>
-                            <p class="error error-password"></p>
-                        </div>
-                        <div class="button-submit">
-                            <button type="submit" class="btn">CREATE ACCOUNT</button>
-                        </div>
-                        <div class="link-wrapper">
-                            <div class="login">
-                                <a href="account.html">Sign In</a>
+                    <div class="col-span-6 px-4">
+                        <div class="w-full">
+                            <a href="">
+                                <img src="https://cdn.shopify.com/s/files/1/0461/9036/2778/files/logo_41be5bb0-ee12-4cb7-8ae7-3267b91b49e3_300x300.png?v=1598248765"
+                                    class="w-[160px]" alt="">
+                            </a>
+                            <div class="flex items-center gap-2 my-3"><a
+                                    class="text-slate-900 no-underline text-base hover:text-[#eb6420] transition-all duration-300"
+                                    href="/cart">Cart</a><span><svg xmlns="http://www.w3.org/2000/svg" fill="none"
+                                        viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                                        class="w-3 h-3 leading-none">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M8.25 4.5l7.5 7.5-7.5 7.5">
+                                        </path>
+                                    </svg></span><a href="#"
+                                    class="text-slate-900 no-underline text-base hover:text-[#eb6420] transition-all duration-300">Infomation</a><span><svg
+                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-3 h-3 leading-none">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M8.25 4.5l7.5 7.5-7.5 7.5">
+                                        </path>
+                                    </svg></span><a href="#"
+                                    class="text-slate-900 no-underline text-base hover:text-[#eb6420] transition-all duration-300">Shipping</a><span><svg
+                                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                        stroke-width="1.5" stroke="currentColor" class="w-3 h-3 leading-none">
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M8.25 4.5l7.5 7.5-7.5 7.5">
+                                        </path>
+                                    </svg></span><span class="font-bold text-base">Payment</span></div>
+                            <div class="border border-2 rounded-lg p-3 mt-4">
+                                <p class="flex gap-5 border-b py-2 m-0"><span class="text-gray-500">Contact</span><span
+                                        class="font-semibold">0123456789</span></p>
+                                <p class="flex gap-5 m-0 border-b py-2"><span class="text-gray-500">Ship to</span><span
+                                        class="font-semibold">Xã Tam Đa, Huyện Phù Cừ, Hưng Yên,vietnam</span></p>
+                                <p class="flex  gap-5 py-2 m-0 border-b py-2"><span
+                                        class="text-gray-500">Method</span><span class="font-semibold">Standard
+                                        Shipping</span></p>
+                                <p class="flex gap-5 py-2 m-0"><span class="text-gray-500">Payment Method</span><span
+                                        class="font-semibold">Pay after recieve</span></p>
                             </div>
-                            <div data-aos="fade-right" data-aos-duration="1000">
-                                <p class="return-home"><a href="index.html">Return to store</a></p>
+
+                            <div class="method pb-4">
+                                <p class="mt-5 text-xl">Shipping method</p>
+                                <div
+                                    class="border border-2 rounded-lg p-3 flex justify-between items-center w-full mt-3">
+                                    <p class="m-0 flex gap-3 items-center"><span
+                                            class="p-[10px] flex justify-center items-center block w-[5px] h-[5px] max-w-[5px] max-h-[5px] bg-blue-600 rounded-full"><span
+                                                class="p-[3px] block w-[3px] h-[3px] max-w-[3px] max-h-[3px] rounded-full leading-none bg-white"></span></span><span
+                                            class="pt-[3px]">
+                                            Standard Shipping</span></p><span
+                                        class="font-semibold pt-[3px]">$2.00</span>
+                                </div>
+                            </div>
+
+                            <div class="step-footer d-flex justify-content-sm-between mt-3 align-items-center">
+                                <div class="product-wishlist-cart">
+                                    <a href="#">
+                                        <button
+                                            class="dt-sc-btn text-slate-900 hover:text-[#eb6420] transition-all duration-300">
+                                            Return to shipping
+                                        </button>
+                                    </a>
+                                </div>
+                                <div class="product-wishlist-cart">
+                                    <a href="">
+                                        <button
+                                            class="dt-sc-btn text-white bg-[#000] py-[10px] px-4 transition-all duration-300 hover:bg-[#eb6420]">
+                                            Pay now
+                                        </button>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </form>
+                    </div>
+                    <div class="col-span-6">
+                        <div class="bg-gray-50 p-5 h-full">
+                            <div class="listItem flex flex-col gap-3 border-b pb-3">
+                                <div class="flex items-center justify-between ">
+                                    <div class="flex gap-3 items-center">
+                                        <div class="image w-fit relative "><img
+                                                src="https://cdn.shopify.com/s/files/1/0461/9036/2778/products/Product14_768x.jpg?v=1599117180"
+                                                class="w-[80px] border rounded-2xl" alt=""><span
+                                                class="absolute top-[-8px] p-1 bg-gray-500 rounded-full leading-none  text-white right-[-8px] min-w-[20px] min-h-[20px] max-w-[20px] max-h-[20px] flex justify-center items-center">1</span>
+                                        </div>
+                                        <p class="font-semibold">LEATHER DESIGNER BAG</p>
+                                    </div>
+                                    <p class="flex-end font-semibold">$15.00</p>
+                                </div>
+                            </div>
+                            <div class="subtotal py-3 border-b m-0">
+                                <p class="flex justify-between my-2"><span class="text-gray-600">Subtotal</span><span
+                                        class="font-semibold">15.00</span></p>
+                                <p class="flex mb-3 justify-between items-center m-0"><span
+                                        class="text-gray-600">Shipping</span><span class="font-semibold">$1.74</span>
+                                </p>
+                            </div>
+                            <div class="total py-3">
+                                <p class="flex justify-between items-center"><span
+                                        class="text-xl font-bold">Total</span><span
+                                        class="font-semibold text-3xl">$16.74</span></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
@@ -280,8 +387,8 @@
 
         <footer>
             <div class="footer-top">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-                    <div class="footer-item">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5 ">
+                    <div class="footer-item col">
                         <div class="footer-logo">
                             <a href="index.html">
                                 <img src="https://cdn.shopify.com/s/files/1/0461/9036/2778/files/light-logo_2x_5a4ab4f7-24bb-4dbe-aa42-0a05e7b9848f_x44@2x.png?v=1612265256"
@@ -303,7 +410,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> INFORMATION </h6>
                             <ul class="footer-menu">
@@ -325,7 +432,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> CUSTOMER SERVICE </h6>
                             <ul class="footer-menu">
@@ -347,7 +454,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item">
+                    <div class="footer-item col">
                         <div class="footer-container">
                             <h6 class="footer-title"> OUR HISTORY </h6>
                             <ul class="footer-menu">
@@ -369,7 +476,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="footer-item footer-form">
+                    <div class="footer-item col ">
                         <div class="footer-container">
                             <h6 class="footer-title">SIGN UP FOR NEWSLETTER</h6>
                             <div class="footer-newsletter">
@@ -399,17 +506,14 @@
         </footer>
     </div>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./asset/js/main.js"></script>
-    <script src="./asset/js/register.js"></script>
+    <script src="./asset/js/contact.js"></script>
 </body>
 
 </html>
